Fix file names to use proper casing

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@ button{
 
     <div class="container">
         <h2>Our Special Memory 📸</h2>
-        <img src="image.jpg" alt="Our Photo">
+        <img src="Image.jpg" alt="Our Photo">
     </div>
 
     <div class="container">
         <h2>Just For You 🎥</h2>
         <video controls>
-            <source src="video.mp4" type="video/mp4">
+            <source src="Video.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -117,7 +117,7 @@ button{
 
 <!-- Background Music -->
 <audio id="bgMusic" loop>
-    <source src="music.mp3" type="audio/mp3">
+    <source src="Music.mp3" type="audio/mp3">
 </audio>
 
 <script>
